# chip_pickering

./: db.sqlite3  manage.py  pyproject.toml
app_chip/: admin.py  apps.py  forms.py  models.py  views.py
app_chip/migrations/: 0001_initial.py  0002_auto_20210629_0308.py  0003_alter_visitor_id.py
pjt_chip/: asgi.py  settings.py  urls.py  wsgi.py
static/style/: styles.css
staticfiles/css/: styles.css
templates/: index.html  resume.html
