[tool.poetry]
name = "chip_pickering"
version = "0.1.0"
description = "A Little About Me"
authors = ["chip_pickering <mykeyworks.2113@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
